syntax = "proto3";

enum WorkspaceEvent {
    CreateWorkspace = 0;
    GetWorkspaceDetail = 1;
}
